Fixed footer to render better on tablets

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,6 +50,7 @@ h3 {
   .tablet-view {
     width: 400px;
   }
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -74,7 +75,6 @@ h3 {
   .margin-bottom {
     margin-bottom: 200px
   }
-
 }
 
 .display-4::before {
@@ -145,36 +145,6 @@ a:hover {
   padding-top: 10px;
 }
 
-/*-----------Carousel-------------------*/
-
-.container-custom {
-  margin-top: 10px;
-  height: 100vh;
-}
-
-.carousel-item {
-  background-position: center;
-  background-size: cover;
-  height: 32em;
-}
-
-.carousel-caption {
-  background-color: #51808B
-}
-
-.carousel-item {
-  padding: 10px;
-  border: 1px solid #E8E8E8
-}
-
-.w-100 {
-  height: 99%
-}
-
-.text-upper {
-  text-transform: uppercase;
-}
-
 /*-----------Buttons-------------------*/
 
 .btn-primary {
@@ -213,9 +183,8 @@ a:hover {
 }
 
 /*-----------Card-------------------*/
-.card-img,
 .card-img-top {
-  height: 300px;
+  height: 270px;
   width: 100%;
   overflow: hidden;
   padding: 5px;
